Acrescentado o motido do paciente ter sido exluido

--- a/media/index.html
+++ b/media/index.html
@@ -57,6 +57,10 @@
 							<option value="semTcle"	>  Sem TCLE </option>
 						</select>
 					</div>
+					<div id='divMotivoPacienteExcluido' class='secondary'>
+						<label for='motivoPacienteExcluido'>Motivo: </label>
+						<input type='text' id='motivoPacienteExcluido' class='text' />
+					</div>
 					<div id='divDataAssinatura' class='secondary'>
 						<label for='data_assinatura'> Data de assinatura do termo de consentimento (TCLE): </label>
 						<input type="text" name="data_assinatura" id="data_assinatura" class='required data' readonly/>
