Mudança dos nomes de alguns campos para simplificar o preenchimento

--- a/media/index.html
+++ b/media/index.html
@@ -307,10 +307,10 @@
 								<option value='tosse'>Tosse </option>
 								<option value='febre'>Febre </option>
 								<option value='expectoracao'>Expectoração (catarro) </option>
-								<option value='hemoptoicoHemoptise'>Hemoptóico / Hemoptise </option>
+								<option value='hemoptoicoHemoptise'>Escarro com sangue </option>
 								<option value='perdaDeApetite'>Perda de apetite </option>
-								<option value='sudoreseNoturna'>Sudorese noturna </option>
-								<option value='dispneia'>Dispnéia </option>
+								<option value='sudoreseNoturna'>Suor noturno </option>
+								<option value='dispneia'>Falta de ar </option>
 								<option value='cansaco'>Cansaço(Astenia) </option>
 								<option value='dorNoPeito'>Dor no Peito</option>
 								<option value='chiadoNoPeito'>Chiado no peito</option>
@@ -480,7 +480,7 @@
 					</div>
 					<div class='wrap'>
 						<div id='divHemoptoico' class='primary required sinais'>
-							<label for='hemoptoico'>Hemoptóico/hemoptise:</label>
+							<label for='hemoptoico'>Escarro com sangue:</label>
 							<select name='hemoptoico' id='hemoptoico' class='selectOneSinais sinais required'>
 								<option value='ignorado' selected> Ignorado  </option>
 								<option value='sim'> Sim  </option>
@@ -539,7 +539,7 @@
 					</div>
 					<div class='wrap'>
 						<div id='divSudorese' class='primary required sinais'>
-							<label for='sudorese'>Sudorese Noturna:</label>
+							<label for='sudorese'>Suor Noturno:</label>
 							<select name='sudorese' id='sudorese' class='selectOneSinais sinais required'>
 								<option value='ignorado' selected> Ignorado  </option>
 								<option value='sim'> Sim  </option>
@@ -716,7 +716,7 @@
 					</div>
 					<div class='wrap'>
 						<div id='divDispneia' class='primary required sinais'>
-							<label for='dispneia'>Dispnéia:</label>
+							<label for='dispneia'>Falta de ar:</label>
 							<select name='dispneia' id='dispneia' class='selectOneSinais sinais required'>
 								<option value='ignorado' selected> Ignorado  </option>
 								<option value='sim'> Sim  </option>
