Mudança de nome de alguns campos para simplificar o preenchimento

--- a/media/index.html
+++ b/media/index.html
@@ -330,7 +330,7 @@
 							<option value='intoleranciaMedicamentosa'>Intolerância Medicamentosa</option>
 							<option value='hepatiteMedicamentosa'>Hepatite Medicamentosa</option>
 							<option value='desnutricao'>Desnutrição</option>
-							<option value='hemoptise'>Hemoptise</option>
+							<option value='hemoptise'>Escarro com sangue</option>
 							<option value='comorbidades'>Comorbidades</option>
 							<option value='transplante'>Transplante</option>
 							<option value='tbExtraPulmonar'>TB Extra Pulmonar</option>
@@ -499,7 +499,7 @@
 					</div>
 					<div class='wrap'>
 						<div id='divHemoptoico' class='primary required sinais'>
-							<label for='hemoptoico'>Hemoptóico/hemoptise:</label>
+							<label for='hemoptoico'>Escarro com sangue:</label>
 							<select name='hemoptoico' id='hemoptoico' class='selectOneSinais sinais required'>
 								<option value='ignorado' selected> Ignorado  </option>
 								<option value='sim'> Sim  </option>
@@ -558,7 +558,7 @@
 					</div>
 					<div class='wrap'>
 						<div id='divSudorese' class='primary required sinais'>
-							<label for='sudorese'>Sudorese Noturna:</label>
+							<label for='sudorese'>Suor Noturno:</label>
 							<select name='sudorese' id='sudorese' class='selectOneSinais sinais required'>
 								<option value='ignorado' selected> Ignorado  </option>
 								<option value='sim'> Sim  </option>
@@ -735,7 +735,7 @@
 					</div>
 					<div class='wrap'>
 						<div id='divDispneia' class='primary required sinais'>
-							<label for='dispneia'>Dispnéia:</label>
+							<label for='dispneia'>Falta de ar:</label>
 							<select name='dispneia' id='dispneia' class='selectOneSinais sinais required'>
 								<option value='ignorado' selected> Ignorado  </option>
 								<option value='sim'> Sim  </option>
