Consertada a obrigatoriedade dos campos de fumo

--- a/media/index.html
+++ b/media/index.html
@@ -919,16 +919,16 @@
 					</div>
 					<div class="secondary" id="divNumeroCigarros">
 						<label for="numeroCigarros">Número de cigarros que fuma/fumava por dia:</label>
-						<input type="text" size="5" maxlength="3" class="number required" name="numeroCigarros" id='numeroCigarros' /> cigarros
+						<input type="text" size="5" maxlength="3" class="number " name="numeroCigarros" id='numeroCigarros' /> cigarros
 					</div>
 					<div class="secondary" id="divTempoFumante">
 						<label for="numeroAnosFumante">Há quanto tempo fuma/fumou :</label>
-						<input type="text" size="5" maxlength="2" class="number required" name="numeroAnosFumante" id="numeroAnosFumante"/> anos
-						<input type="text" size="5" maxlength="2" class="number required" name="numeroMesesFumante" id="numeroMesesFumante"/> meses
+						<input type="text" size="5" maxlength="2" class="number " name="numeroAnosFumante" id="numeroAnosFumante"/> anos
+						<input type="text" size="5" maxlength="2" class="number " name="numeroMesesFumante" id="numeroMesesFumante"/> meses
 					</div>
 					<div id='divCargaTabagistica' class='secondary'>
 						<label for='name'> Carga Tabágica: </label>
-						<input type="text" name="cargaTabagistica" id="cargaTabagistica" class='required' size='4' readonly/> maços/ano
+						<input type="text" name="cargaTabagistica" id="cargaTabagistica" class='' size='4' readonly/> maços/ano
 					</div>
 					<div id='divBebida' class='primary required'>
 						<label for='bebida'>Consome bebidas alcoólicas:</label>
