modified:   media/index.html 	Alteracao em "Sinais, sintomas e dados clinicos" da opcao 'Escarro 	com sangue' para 'Catarro com sangue'

--- a/media/index.html
+++ b/media/index.html
@@ -324,7 +324,7 @@
 							<option value='intoleranciaMedicamentosa'>Intolerância Medicamentosa</option>
 							<option value='hepatiteMedicamentosa'>Hepatite Medicamentosa</option>
 							<option value='desnutricao'>Desnutrição</option>
-							<option value='hemoptise'>Escarro com sangue</option>
+							<option value='hemoptise'>Catarro com sangue</option>
 							<option value='comorbidades'>Comorbidades</option>
 							<option value='transplante'>Transplante</option>
 							<option value='tbExtraPulmonar'>TB Extra Pulmonar</option>
@@ -493,7 +493,7 @@
 					</div>
 					<div class='wrap'>
 						<div id='divHemoptoico' class='primary required sinais'>
-							<label for='hemoptoico'>Escarro com sangue:</label>
+							<label for='hemoptoico'>Catarro com sangue:</label>
 							<select name='hemoptoico' id='hemoptoico' class='selectOneSinais sinais required'>
 								<option value='ignorado' selected> Ignorado  </option>
 								<option value='sim'> Sim  </option>
