modified:   index.html 	Alterando 'Escarro com sangue' para 'Catarro com sangue' na secao 	'Sinais, sintomas e dados clinicos'

--- a/media/index.html
+++ b/media/index.html
@@ -324,7 +324,7 @@
 							<option value='intoleranciaMedicamentosa'>Intolerância Medicamentosa</option>
 							<option value='hepatiteMedicamentosa'>Hepatite Medicamentosa</option>
 							<option value='desnutricao'>Desnutrição</option>
-							<option value='hemoptise'>Catarro com sangue</option>
+							<option value='hemoptise'>Escarro com sangue</option>
 							<option value='comorbidades'>Comorbidades</option>
 							<option value='transplante'>Transplante</option>
 							<option value='tbExtraPulmonar'>TB Extra Pulmonar</option>
