Alterando 'Escarro com sangue' para 'Catarro com sangue' na secao 	'Sinais, sintomas e dados clinicos'

--- a/media/index.html
+++ b/media/index.html
@@ -493,7 +493,7 @@
 					</div>
 					<div class='wrap'>
 						<div id='divHemoptoico' class='primary required sinais'>
-							<label for='hemoptoico'>Escarro com sangue: :</label>
+							<label for='hemoptoico'>Catarro com sangue: :</label>
 							<select name='hemoptoico' id='hemoptoico' class='selectOneSinais sinais required'>
 								<option value='ignorado' selected> Ignorado  </option>
 								<option value='sim'> Sim  </option>
