Alteracao de "Informacoes sobre a internacao" para "Qual a causa da 	consulta"; 	Autora: Andressa Sivolella

--- a/media/index.html
+++ b/media/index.html
@@ -301,22 +301,22 @@
 						</div>
 				</fieldset>
 				<fieldset>
-					<legend>Informações sobre a internação</legend>
+					<legend>Qual a causa da consulta</legend>
 						<div id='divMotivoVindaUnidadeSaude' class='primary required'>
-							<label for='motivoVindaUnidadeSaude'>Por que você veio a unidade de saúde para a consulta?</label>
+							<label for='motivoVindaUnidadeSaude'>Por que você veio a unidade de saúde para esta consulta?</label>
 							<select name='motivoVindaUnidadeSaude' id='motivoVindaUnidadeSaude' class='primary' style='width:176px'>
 								<option value='ignorado'>Ignorado </option>
 								<option value='tosse'>Tosse </option>
 								<option value='febre'>Febre </option>
 								<option value='expectoracao'>Expectoração (catarro) </option>
-								<option value='hemoptoicoHemoptise'>Escarro com sangue </option>
+								<option value='hemoptoicoHemoptise'>Hemoptóico/Hemoptise </option>
 								<option value='perdaDeApetite'>Perda de apetite </option>
-								<option value='sudoreseNoturna'>Suor noturno </option>
-								<option value='dispneia'>Falta de ar </option>
-								<option value='cansaco'>Cansaço(Astenia) </option>
+								<option value='sudoreseNoturna'>Sudorese noturna </option>
+								<option value='dispneia'>Dispnéia (Falta de ar) </option>
 								<option value='dorNoPeito'>Dor no Peito</option>
 								<option value='chiadoNoPeito'>Chiado no peito</option>
 								<option value='alteracaoRaioX'>Alteração no Raio X</option>
+								<option value='cansaco'>Cansaço(Astenia) </option>
 								<option value='outros'>Outros </option>
 							</select>
 						</div>
