Alterando "Escarro com sangue" para "Catarro com sangue" em 	"Sinais, sintomas e dados clinicos"; 	Alterando ordem da pergunta "Ja acordou com falta de ar, chiado no 	peito ou tosse", de acordo com o formulario impresso 	Autora: Andressa Sivolella

--- a/media/index.html
+++ b/media/index.html
@@ -482,7 +482,7 @@
 					</div>
 					<div class='wrap'>
 						<div id='divHemoptoico' class='primary required sinais'>
-							<label for='hemoptoico'>Escarro com sangue:</label>
+							<label for='hemoptoico'>Catarro com sangue:</label>
 							<select name='hemoptoico' id='hemoptoico' class='selectOneSinais sinais required'>
 								<option value='ignorado' selected> Ignorado  </option>
 								<option value='sim'> Sim  </option>
@@ -807,17 +807,17 @@
 							<option value='nao'> N&atilde;o  </option>
 						</select>
 					</div>
-					<div id='divCoriza' class='primary required sinais'>
-						<label for='coriza'> Coriza, coceira no nariz ou espirros frequentes:</label>
-						<select name='coriza' id='coriza' class='selectOneSinais required'>
+					<div id='divAcordaSemAr' class='secondary sinais'>
+						<label for='acordaSemAr'>Já acordou com falta de ar, chiado no peito ou tosse:</label>
+						<select name='acordaSemAr' id='acordaSemAr' class='selectOneSinais'>
 							<option value='ignorado' selected> Ignorado  </option>
 							<option value='sim'> Sim  </option>
 							<option value='nao'> N&atilde;o  </option>
 						</select>
 					</div>
-					<div id='divAcordaSemAr' class='secondary sinais'>
-						<label for='acordaSemAr'>Já acordou com falta de ar, chiado no peito ou tosse:</label>
-						<select name='acordaSemAr' id='acordaSemAr' class='selectOneSinais'>
+					<div id='divCoriza' class='primary required sinais'>
+						<label for='coriza'> Coriza, coceira no nariz ou espirros frequentes:</label>
+						<select name='coriza' id='coriza' class='selectOneSinais required'>
 							<option value='ignorado' selected> Ignorado  </option>
 							<option value='sim'> Sim  </option>
 							<option value='nao'> N&atilde;o  </option>
