Alterando de 'Aquisicao de bens' para 'Posse de itens' em 	'Informacoes pessoais do paciente' 	Autora: Andressa Sivolella

--- a/media/index.html
+++ b/media/index.html
@@ -190,8 +190,8 @@
 					<label for='rendaMensalFamiliar'>Renda mensal da família(Valor em reais. Somar as rendas de todosos familiares): </label>
 					<input type="text" name="rendaMensalFamiliar" id="rendaMensalFamiliar" class='money' size='15'/>
 				</div>
-				<div id='idAquisicaoDeBens' class='primary required'>
-					<label for='aquisicaoDeBens'> Aquisição de Bens </label>
+				<div id='idPosseDeItens' class='primary required'>
+					<label for='posseDeItens'> Posse de itens </label>
 						<div id='divFreezer' class='primary required'>
 							<label for='freezer'>Freezer(normal ou porta duplex):</label>
 							<select name='freezer' id='freezer' class='primary' style='width:176px'>
