--- a/media/index.html
+++ b/media/index.html
@@ -896,6 +896,14 @@
 							<option value='nao'> N&atilde;o  </option>
 						</select>
 					</div>
+					<div id='divEscarroEraPositivo' class='secondary'>
+						<label for'escarroEraPositivo'> Escarro era positivo: </label>
+						<select name='escarroEraPositivo' id='escarroEraPositivo' class='selectOne'>
+							<option value='ignorado' selected> Ignorado </option>
+							<option value='sim'> Sim </option>
+							<option value='nao'> N&atilde;o </option>
+						</select>
+					</div>
 					<div id='divContatoTuberculoseResistente' class='primary required'>
 						<label for='contatoTuberculoseResistente'>Contato com TB pulmonar resistente:</label>
 						<select name='contatoTuberculoseResistente' id='contatoTuberculoseResistente' class='selectOneSinais required'>
