Incluindo pergunta 'Escarro era positivo' caso tenha respondido 	'Sim' para 'Contato com TB pulmonar' em 'Nos ultimos 2 anos' - Editando action.js 	Autora: Andressa Sivolella

--- a/media/index.html
+++ b/media/index.html
@@ -897,8 +897,8 @@
 						</select>
 					</div>
 					<div id='divEscarroEraPositivo' class='secondary'>
-						<label for='escarroEraPositivo'> Escarro era positivo: </label>
-						<select name='escarroEraPositivo' id='escarroEraPositivo' class='selectOne'>
+						<label for='escarroEraPositivo'> O escarro era positivo: </label>
+						<select name='escarroEraPositivo' id='escarroEraPositivo' class='selectOneSinais'>
 							<option value='ignorado' selected> Ignorado </option>
 							<option value='sim'> Sim </option>
 							<option value='nao'> N&atilde;o </option>
