Inserindo pergunta 'Escarro era positivo' caso tenha respondido 	'Sim' para 'Contato TB pulmonar positiva' - Editando action.js 	Autora: Andressa Sivolella

--- a/media/index.html
+++ b/media/index.html
@@ -897,7 +897,7 @@
 						</select>
 					</div>
 					<div id='divEscarroEraPositivo' class='secondary'>
-						<label for'escarroEraPositivo'> Escarro era positivo: </label>
+						<label for'escarroEraPositivo'> O escarro era positivo: </label>
 						<select name='escarroEraPositivo' id='escarroEraPositivo' class='selectOne'>
 							<option value='ignorado' selected> Ignorado </option>
 							<option value='sim'> Sim </option>
