Incluindo pergunta 'Escarro era positivo' caso tenha respondido 	'Sim' para 'Contato com TB pulmonar positiva' em 'Ultimos 2 anos'; 	Autora: Andressa Sivolella

--- a/media/index.html
+++ b/media/index.html
@@ -907,6 +907,14 @@
 							<option value='nao'> N&atilde;o  </option>
 						</select>
 					</div>
+					<div id='divEscarroEraPositivo' class='secondary'>
+						<label for='escarroEraPositivo'> O escarro era positivo: </label>
+						<select name='escarroEraPositivo' id='escarroEraPositivo' class='selectOneSinais'>
+							<option value='ignorado' selected> Ignorado </option>
+							<option value='sim'> Sim </option>
+							<option value='nao'> N&atilde;o </option>
+						</select>
+					</div>
 					<div id='divContatoTuberculoseResistente' class='primary required'>
 						<label for='contatoTuberculoseResistente'>Contato com TB pulmonar resistente:</label>
 						<select name='contatoTuberculoseResistente' id='contatoTuberculoseResistente' class='selectOneSinais required'>
