--- a/media/index.html
+++ b/media/index.html
@@ -908,7 +908,7 @@
 						</select>
 					</div>
 					<div id='divEscarroEraPositivo' class='secondary'>
-						<label for='escarroEraPositivo'> O escarro era positivo: </label>
+						<label for='escarroEraPositivo'> Escarro era positivo: </label>
 						<select name='escarroEraPositivo' id='escarroEraPositivo' class='selectOneSinais'>
 							<option value='ignorado' selected> Ignorado </option>
 							<option value='sim'> Sim </option>
