--- a/media/index.html
+++ b/media/index.html
@@ -305,13 +305,14 @@
 					<div id='divCausasNaoMedicas' name='causasNaoMedicas' class='primary required'>
 						<label for='causasNaoMedicas'>Causas não Médicas:</label>
 						<select name='causasNaoMedicas' id='causasNaoMedicas'>
-							<option value='moradorDeRua'>Morador de Rua</option>
-							<option value='alcoolista'>Alcoolista</option>
-							<option value='drogadito'>Drogadito</option>
-							<option value='abandonoFamiliar'>Abandono Familiar</option>
-							<option value='pacientePsiquiatrico'>Paciente Psiquiátrico</option>
-							<option value='decidiuSozinho'>Decidiu sozinho</option>
-							<option value='outros'>Outros</option>
+							<option value=''					> ---					</option>
+							<option value='moradorDeRua'		> Morador de Rua		</option>
+							<option value='alcoolista'			> Alcoolista			</option>
+							<option value='drogadito'			> Drogadito				</option>
+							<option value='abandonoFamiliar'	> Abandono Familiar		</option>
+							<option value='pacientePsiquiatrico'> Paciente Psiquiátrico	</option>
+							<option value='decidiuSozinho'		> Decidiu sozinho		</option>
+							<option value='outros'				> Outros				</option>
 						</select>
 					</div>
 					<div id='divEspecificarCausasNaoMedicas' class='secondary'>
@@ -321,16 +322,17 @@
 					<div id='divCausasMedicas' name='causasMedicas' class='primary required'>
 						<label for='causasMedicas'>Causas Médicas:</label>
 						<select name='causasMedicas' id='causasMedicas'>
-							<option value='intoleranciaMedicamentosa'>Intolerância Medicamentosa</option>
-							<option value='hepatiteMedicamentosa'>Hepatite Medicamentosa</option>
-							<option value='desnutricao'>Desnutrição</option>
-							<option value='hemoptise'>Escarro com sangue</option>
-							<option value='comorbidades'>Comorbidades</option>
-							<option value='transplante'>Transplante</option>
-							<option value='tbExtraPulmonar'>TB Extra Pulmonar</option>
-							<option value='hiv'>HIV</option>
-							<option value='tbPleural'>TB pleural</option>
-							<option value='outros'>Outros</option>
+							<option value=''						 > ---						  </option>
+							<option value='intoleranciaMedicamentosa'> Intolerância Medicamentosa </option>
+							<option value='hepatiteMedicamentosa'	 > Hepatite Medicamentosa	  </option>
+							<option value='desnutricao'				 > Desnutrição				  </option>
+							<option value='hemoptise'				 > Escarro com sangue		  </option>
+							<option value='comorbidades'			 > Comorbidades				  </option>
+							<option value='transplante'				 > Transplante				  </option>
+							<option value='tbExtraPulmonar'			 > TB Extra Pulmonar		  </option>
+							<option value='hiv'						 > HIV						  </option>
+							<option value='tbPleural'				 > TB pleural				  </option>
+							<option value='outros'					 > Outros					  </option>
 						</select>
 					</div>
 					<div id='divEspecificarCausasMedicas' class='secondary'>
@@ -340,11 +342,12 @@
 					<div id='divResponsavelPeloEncaminhamentoParaInternacao' name='divResponsavelPeloEncaminhamentoParaInternacao' class='primary required'>
 						<label for='responsavelPeloEncaminhamentoParaInternacao'>Como foi o encaminhaminhamento para a internação:</label>
 						<select name='responsavelPeloEncaminhamentoParaInternacao' id='responsavelPeloEncaminhamentoParaInternacao'>
+							<option value=''					> ---						</option>
 							<option value='postoDeSaude'		> Posto de Saúde  			</option>
 							<option value='upa'					> UPA  						</option>
 							<option value='hospital'			> Hospital  				</option>
 							<option value='contatoMedicoMedico'	> Contato médico a médico  	</option>
-							<option value='outros'>Outras</option>
+							<option value='outros'				> Outras					</option>
 						</select>
 					</div>
 					<div id='divEspecificarResponsavelPeloEncaminhamentoParaInternacao' class='secondary'>
