Alterando opcao 'Visita familiar' por 'Visita domiciliar' na 	pergunte 'Voce 	procurou a unidade de saude por orientacao de alguem?' em 'Qual a 	causa da consulta'; 	Autora: Andressa Sivolella <andressasivolella@gmail.com>

--- a/media/index.html
+++ b/media/index.html
@@ -330,7 +330,7 @@
 								<option value='ignorado'>Ignorado </option>
 								<option value='decidiuSozinho'>Decidiu sozinho</option>
 								<option value='orientadoPorFamiliar'>Orientado por familiar</option>
-								<option value='visitaFamiliar'>Visita familiar</option>
+								<option value='visitaFamiliar'>Visita domiciliar</option>
 								<option value='encaminhadoPorOutroServicoDeSaude'>Encaminhado por outro serviço de saúde (hospital,US,serviço privado)</option>
 								<option value='orientacaoNaComunidade'>Orientação na comunidade (varredura, campanhas educativas, reuniões do conselho                            local, jornais do bairro)</option>
 								<option value='outros'>Outros</option>
