Retirando obrigatoriedade dos campos 'Altura', 'Peso habitual' e 	'Peso atual' em 'Sinais, sintomas e dados clinicos' 	Autora: Andressa Sivolella <andressasivolella@gmail.com>

--- a/media/index.html
+++ b/media/index.html
@@ -344,24 +344,24 @@
 				<fieldset id='sinais'>
 					<legend>Sinais, sintomas e dados clínicos</legend>
 					<div class="primary" id="divAltura">
-						<label for="altura" class="required">Altura:</label>
-						<input type="text" size="5" maxlength="3" class="number required" name="altura" id="altura" /> cm
+						<label for="altura">Altura:</label>
+						<input type="text" size="5" maxlength="3" class="number" name="altura" id="altura" /> cm
 					</div>
 					<div class="primary" id="divPesoAtual">
-						<label for="pesoAtual" class="required">Peso atual:</label>
-						<input type="text" size="5" maxlength="5" class="number required" name="pesoAtual" id="pesoAtual"/> Kg
+						<label for="pesoAtual">Peso atual:</label>
+						<input type="text" size="5" maxlength="5" class="number" name="pesoAtual" id="pesoAtual"/> Kg
 					</div>
 					<div class="primary" id="divPesoHabitual">
-						<label for="pesoHabitual" class="required">Peso Habitual:</label>
-						<input type="text" size="5" maxlength="5" class="number required" name="pesoHabitual" id="pesoHabitual"/> Kg
+						<label for="pesoHabitual" >Peso Habitual:</label>
+						<input type="text" size="5" maxlength="5" class="number" name="pesoHabitual" id="pesoHabitual"/> Kg
 					</div>
 					<div id='divTempoEmagrecimento' class='secondary'>
 						<label for='tempoEmagrecimento'>Tempo de Emagrecimento:</label>
-						<input type="text" size="5" maxlength="5" class="number required sinais" name="tempoEmagrecimento" id="tempoEmagrecimento"/ > mes(es)
+						<input type="text" size="5" maxlength="5" class="number" name="tempoEmagrecimento" id="tempoEmagrecimento"/ > mes(es)
 					</div>
 					<div id='divEmagrecimento' class='primary required'>
 						<label for='emagrecimento'>Emagrecimento:</label>
-						<input type="text" size="10" maxlength="3" class="required sinais" name="emagrecimento" id="emagrecimento" readonly/ >
+						<input type="text" size="10" maxlength="3" name="emagrecimento" id="emagrecimento" readonly/ >
 					</div>
 					<div class='wrap'>
 						<div id='divTosse' class='primary required sinais'>
